add CURD task modal

--- a/src/features/todo-column/style.module.css
+++ b/src/features/todo-column/style.module.css
@@ -14,13 +14,19 @@
 .header {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   width: 100%;
-  gap: 16px;
-  color: var(--primary-color);
   margin-bottom: 24px;
 }
 
-.header > h2 {
+.title {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  color: var(--primary-color);
+}
+
+.title > h2 {
   font-size: var(--fs-heading);
   font-weight: var(--fw-bold);
 }
