--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -8,7 +8,13 @@
 .taskListWrapper {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   gap: 1.5rem;
+  height: 100%;
+  width: 100%;
+  padding: 16px 0;
+}
+
+.dropIndicator {
+  box-shadow: rgba(43, 24, 135, 1) 0px 7px 29px 0px;
 }
