--- a/src/features/todo-column/style.module.css
+++ b/src/features/todo-column/style.module.css
@@ -5,6 +5,7 @@
   justify-content: flex-start;
   width: 100%;
   height: auto;
+  min-height: calc(100vh - 80px);
   padding: 24px;
 
   border-radius: var(--border-radius);
