--- a/src/components/button/style.module.css
+++ b/src/components/button/style.module.css
@@ -1,7 +1,6 @@
 .button {
   background-color: var(--primary-color);
   border: none;
-  color: white;
   padding: 8px 16px;
   text-align: center;
 
@@ -19,6 +18,7 @@
 }
 
 .primary {
+  color: white;
   background-color: var(--primary-color);
 }
 
@@ -28,6 +28,7 @@
 
 .secondary {
   background-color: var(--secondary-color);
+  color: #000;
 }
 
 .secondary:hover {
